maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value Direcion
    if (!estFaceMur && getDirection()==Direcion.NORTH){
                                       ^